tracepoint to check when a node is disconnected is added

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
     "python.analysis.extraPaths": [
         "./test/functional"
-    ]
+    ],
+    "files.associations": {
+        "optional": "cpp"
+    }
 }
